fix: axe issue (color contrast)

--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ opacity: 0.5;
 }
 
 .product-info-desc {
-  color: var(--Grayish-blue);
+  color: var(--Dark-grayish-blue);
   font-weight: 700;
 }
 
